--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,12 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  gap: 32px;
+}
+
+body, li{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -10,6 +17,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.text {
+  text-align: center;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 52px;
+}
+
+li {
+  width: 200px;
+  height: auto;
 }
 
 /* do not edit this footer */
